# DebtFlow

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  conftest.py  debtflow_planning.md  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  terraform-plan.yml
apps/accounts/: admin.py  auth.py  filters.py  health.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/analytics/: admin.py  serializers.py  urls.py  views.py
apps/audit/: admin.py  apps.py  middleware.py  models.py  signals.py
apps/integrations/: admin.py  importers.py  models.py  parsers.py  serializers.py  sftp_client.py  urls.py  views.py
apps/payments/: admin.py  models.py  serializers.py  services.py  urls.py  views.py  webhooks.py
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  staging.py
docker/: .dockerignore  Dockerfile  Dockerfile.worker  docker-compose.test.yml  docker-compose.yml  init-db.sql
docker/sftp-samples/: new_placements_feb2026.csv  portfolio_transfer_march2026.csv  urgent_placements_feb13.csv
docs/: api.md  architecture.md  aula-infraestrutura-aws-kubernetes.md  debtflow-product.md  performance.md
docs/adrs/: 001-monolith-vs-microservices.md  002-postgres-as-source-of-truth.md  003-celery-redis-vs-sqs.md  004-audit-log-partitioning.md  005-helm-vs-kustomize.md  006-terraform-workspaces.md  (+2 more)
frontend/: .dockerignore  .env.development  .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
requirements/: base.txt  local.txt  prod.txt  test.txt
scripts/: run_migrations.sh  seed_data.py  sftp_test_upload.py
tasks/: maintenance.py  payment_tasks.py  report_tasks.py  sftp_tasks.py
(+168 files in other folders)
